--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 cigars.json
+.DS_Store
+
+_pycache_/*
+.idea/*
 
 # User-specific stuff
 .idea/**/workspace.xml
